fix: make scrollbar track always visible

--- a/web/src/app/globals.css
+++ b/web/src/app/globals.css
@@ -46,6 +46,10 @@ body {
 
 /************** Scrollbar **************/
 
+html {
+  overflow-y: scroll;
+}
+
 body {
   scrollbar-width: thin;
   scrollbar-color: --tw-bg-zinc-900 --tw-bg-zinc-500;
